Se ha añadido fecha limite

--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -173,3 +173,20 @@ strong.baja {
 .mensaje.oculto {
     opacity: 0;
 }
+
+.fecha-limite {
+    display: inline-block;
+    margin-top: 5px;
+    font-size: 12px;
+    color: #e67e22;
+}
+
+input[type="date"] {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    font-size: 14px;
+    color: #333;
+}
