--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -51,6 +51,9 @@
             <input type="text" name="titulo" placeholder="Tarea nueva" required>
             <textarea name="descripcion" placeholder="Descripción de la tarea (opcional)"></textarea>
             
+            <label for="fecha_limite">Desea poner una fecha limite?</label><br>
+            <input type="date" value="{{ tasks.fecha_limite.strftime('%Y-%m-%d') if tasks.fecha_limite else '' }}" name="fecha_limite"><br>
+
             <label for="prioridad">Qué prioridad tiene?</label>
             
             <select name="prioridad">
@@ -69,13 +72,17 @@
                             <p>{{ task.descripcion }}</p>
                         {% endif %}
 
+                        {% if task.fecha_limite %}
+                            {{ task.fecha_limite.strftime('%d/%m/%Y') }}
+                        {% endif %}
+
                         <span class="prioridad-insignia {{ task.prioridad }}">
                             {% if task.prioridad == 'alta' %} Alta
                             {% elif task.prioridad == 'media' %} Media
                             {% else %} Baja
                             {% endif %}
                         </span>
-                        <small>Creada: {{ task.creada_en.strftime('%d/%m/%Y %H:%M') }} </small>
+                        <span class="fecha_limite">Creada: {{ task.creada_en.strftime('%d/%m/%Y %H:%M') }} </span>
 
                         <form method="post" action="/completar/{{ task.id }}" style="display: inline;">
                             <button type="submit">
