Se han añadido estadísticas

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -45,7 +45,11 @@
                 
                 <button type="submit">Filtrar</button>
                 <a href="/"><button type="button">Limpiar</button></a>
+                <a href="/estadisticas">
+                    <button type="button">Estadísticas de Tareas</button>
+                </a>
             </form>
+
         </div>
         <form method="post" action="/create">
             <input type="text" name="titulo" placeholder="Tarea nueva" required>
