--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -160,6 +160,15 @@ strong.baja {
     color: #2e7d32;
 }
 
+.categoria-insignia{
+    display: inline-block;
+    padding: 3px 8px;
+    border-radius: 12px;
+    font-size: 11px;
+    font-weight: bold;
+    margin-left: 10px;
+}
+
 .mensaje {
     background-color: #e8f5e9;
     color: #2e7d32;
